# elfhex

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  setup.cfg  setup.py
elfhex/: __init__.py  __main__.py  elf.py  elfhex.lark  elfhex.py  file_loader.py  preprocessor.py  program.py  transformer.py  util.py
elfhex/extensions/: README.md
elfhex/extensions/x86/: args.py  x86.lark
samples/: common.eh  function.eh  hello_world.eh  print.eh
test/: test_main.py  test_preprocessor.py  test_transformer.py  util.py
test/data/: include.eh  noheader.eh  test.eh
test/extensions/x86/: test_args.py
