[metadata]
name = elfhex
author = Google LLC
summary = A small "assembler" for ELF executables
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
license = Apache-2
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    
[files]
packages =
    elfhex

[entry_points]
console_scripts =
    elfhex = elfhex.__main__:main

[pbr]
skip_authors = True
skip_changelog = True