[metadata]
name = elfhex
author = Google LLC
summary = A small "assembler" for ELF executables
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
license = Apache-2
home-page = https://github.com/Synook/elfhex
python-requires = >=3.6
classifier =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    
[files]
packages =
    elfhex

[entry_points]
console_scripts =
    elfhex = elfhex.__main__:main

[pbr]
skip_authors = True
skip_changelog = True

[tool:pytest]
addopts = --cov=elfhex
